# rust-ole-inspector

./: .gitignore  Cargo.toml  README.md
.github/instructions/: AGENT.instructions.md
Docs/: CHANGELOG.MD
src/: console.rs  display.rs  filter.rs  main.rs  registry.rs  security.rs  types.rs
